Improve AgniPress authentication reliability